--- a/dir_2/index.html
+++ b/dir_2/index.html
@@ -16,6 +16,11 @@
 <p>
 Department of Mathematics and Statistics<BR>
 University of Maryland, Baltimore County<BR>
+ <BR>
+ UMBC Presidential Research Professor
+ <BR>
+ USM Board of Regents' Research Professor 
+ <BR>
 1000 Hilltop Circle<BR>
 Baltimore, MD 21250<BR>
 </p>
