--- a/dir_2/index.html
+++ b/dir_2/index.html
@@ -55,12 +55,18 @@ Decision theory, Stochastic ordering, Sequential selection, Sequential methods, 
 Erd&ouml;s Number 2
 -->
 <br>
-Professor Sinha is the Founder of the Statistics Graduate Program at UMBC. A 1973 PhD in statistics from the University of Calcutta/India, Professor Sinha is an ex-faculty of the Indian Statistical Institute and the University of Pittsburgh. A Professor of Statistics at UMBC since 1985, Professor Sinha's research activities span topics in theoretical and applied statistics, including multivariate analysis, linear models, ranked set sampling, environmental statistics, statistical meta-analysis, and data analysis under confidentiality protection. He has coedited several volumes, and coauthored four books (John Wiley, Springer, Academic). He is a Fellow of the American Statistical Association and the Institute of Mathematical Statistics, and an elected member of the International Statistical Institute. His research has been funded by the US Environmental Protection Agency for about twenty years.
-
-Professor Sinha's research contribution in the area of environmental statistics has been recognized through a Distinguished Achievement Award from the Environmental Statistics Section of the American Statistical Association. In acknowledgment of his research productivity, Professor Sinha was named a Presidential Research Professor in 2008. Furthermore, he received the University System of Maryland Board of Regents Excellence in Research award in 2012.
-
-Professor Sinha has served on the editorial board of several national and international statistics journals, and mentored over 25 PhD students. 
 <BR>
+ Professor Sinha is the Founder of the Statistics Graduate Program at UMBC. A 1973 PhD in statistics from the University of Calcutta/India, 
+ Professor Sinha is an ex-faculty of the Indian Statistical Institute and the University of Pittsburgh. 
+ A Professor of Statistics at UMBC since 1985, Professor Sinha's research activities span topics in theoretical and applied statistics, including multivariate analysis, 
+ linear models, ranked set sampling, environmental statistics, statistical meta-analysis, and data analysis under confidentiality protection. 
+ He has co edited several volumes, and co authored four books (John Wiley, Springer, Academic). He is a Fellow of the American Statistical Association and the 
+ Institute of Mathematical Statistics, and an elected member of the International Statistical Institute. 
+ His research has been funded by the US Environmental Protection Agency for about twenty years. Professor Sinha's research contribution in the area of 
+ environmental statistics has been recognized through a Distinguished Achievement Award from the Environmental Statistics Section of the American Statistical Association. 
+ In acknowledgment of his research productivity, Professor Sinha was named a Presidential Research Professor in 2008. Furthermore, he received the 
+ University System of Maryland Board of Regents Excellence in Research award in 2012. Professor Sinha has served on the editorial board of several national and international statistics journals, 
+ and mentored over 35 PhD students. 
 <BR>
  
 <HR SIZE=3 WIDTH=100%>
